Add monitor speed to platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = teensy
 board = teensy41
 framework = arduino
+monitor_speed = 115200
 upload_protocol = teensy-gui 
                 ; teensy-gui | teensy-cli
