--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,5 @@ platform = teensy
 board = teensy41
 framework = arduino
 monitor_speed = 115200
-upload_protocol = teensy-gui 
-                ; teensy-gui | teensy-cli
+upload_protocol = teensy-gui
+lib_deps = 
