--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 upload_protocol = teensy-gui
-lib_deps = 
+lib_deps = denyssene/SimpleKalmanFilter@^0.1.0
